--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
       <meta charset="UTF-8">
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
       <title>DaftCode React Starter</title>
-  <link href="/main.css" rel="stylesheet"></head>
+  <link href="main.css" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="/main.63c0887c4657dabfb0f4.js"></script></body>
+  <script type="text/javascript" src="main.22ae828bb4b0be8ef39c.js"></script></body>
 </html>
